# qml_tutorial

./: .gitignore  .qmlls.ini  CMakeLists.txt  README.md  main.cpp
config/: test_config.json
qml/: Calculator.qml
